--- a/django/templates/layout.html
+++ b/django/templates/layout.html
@@ -8,7 +8,7 @@
                                 <td width="10%"> <a id="menu_a" href="/home/mpage"  class="button">My page</a></td>
                                 <td width="10%"> <a id="menu_a" href="/mktg/ppp" class="button">Marketing</a></td>
                                 <td width="10%"> <a id="menu_a" href="/hr/employee" class="button">HR</a></td>
-                                <td width="10%"> <a id="menu_a" href="http://128.199.120.195:8069/web/reset_password" class="button">Password</a></td>
+                                <td width="10%"> <a id="menu_a" href="/home/help" class="button">Help</a></td></td>
                                 <td width="10%"> <a id="menu_a" href="/home/contact" class="button">Contact Us</a></td>
                                 <td width="10%"> <a id="menu_a" href="/home/admin" class="button">Admin</a></td>
                                 <td width="10%"> <a id="menu_a" href="/home/logout" class="button">Logout</a></td>
